tests/wpt/tests/third_party/test262/test/language/expressions/async-generator/early-errors-expression-NSPL-with-USD.js
// Copyright 2017 the V8 project authors. All rights reserved.
// This code is governed by the BSD license found in the LICENSE file.

/*---
author: Caitlin Potter <caitp@igalia.com>
esid: sec-async-generator-function-definitions-static-semantics-early-errors
description: >
  It is a Syntax Error if ContainsUseStrict of AsyncGeneratorBody is true and
  IsSimpleParameterList of UniqueFormalParameters is false.
negative:
  phase: parse
  type: SyntaxError
features: [async-iteration]
---*/

$DONOTEVALUATE();

(async function*(x = 1) {"use strict"});
